# Ros_Qt5_Gui_App

./: .gitignore  CMakeLists.txt  setup_env.sh
docs/superpowers/plans/: 2026-04-14-optimize-message-bus.md  2026-04-15-cmake-best-practice-refactor.md
docs/superpowers/specs/: 2026-04-14-variadic-subscribe-macro.md  2026-04-15-cmake-best-practice-refactor.md
scripts/mock_robot/: README.md  mock_robot.py  run_mock.sh
src/channel/: CMakeLists.txt  virtual_channel_node.h
src/channel/ros1/: rosnode.cpp
src/channel/ros2/: rclcomm.cpp  rclcomm.h
src/channel/rosbridge/: rosbridge_comm.cpp
src/core/framework/: CMakeLists.txt  framework.h  framework_test.cpp  message_bus.h  thread_pool.cpp  thread_pool.h
src/mainwindow/: mainwindow.cpp  mainwindow.h
src/mainwindow/display/: display_cost_map.cpp  display_occ_map.cpp
src/mainwindow/display/manager/: display_manager.cpp  display_manager.h
src/mainwindow/widgets/: diagnostic_dock_widget.cpp  diagnostic_dock_widget.h  ratio_layouted_frame.cpp  ratio_layouted_frame.h
